# clearscreen

./: .editorconfig  CHANGELOG.md  CITATION.cff  Cargo.toml  README.md  TERMINALS.md  bors.toml  cliff.toml  release.toml
.github/workflows/: check.yml  main.yml  merge.yml  tests.yml
examples/: cli.rs  clscli.rs
src/: lib.rs
tests/: default.rs  platformed.rs  win10.rs
tests/win10/: Cargo.toml  build.rs  manifest.rc  win10.exe.manifest
tests/win10/src/: main.rs
