[package]
name = "clearscreen"
version = "3.0.0"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0 OR MIT"
description = "Cross-platform terminal screen clearing"
keywords = ["clear", "cls", "cli", "terminal"]

documentation = "https://github.com/watchexec/clearscreen"
homepage = "https://github.com/watchexec/clearscreen"
repository = "https://github.com/watchexec/clearscreen"
readme = "README.md"

edition = "2021"
exclude = ["/bin", "/.github"]
rust-version = "1.72.0"

[features]
windows-console = []

[dependencies]
terminfo = "0.9.0"
thiserror = "2.0.9"
which = "7.0.0"

[target.'cfg(unix)'.dependencies.nix]
version = "0.29.0"
default-features = false
features = ["fs", "term"]

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = [
	"consoleapi",
	"errhandlingapi",
	"handleapi",
	"impl-default",
	"lmapibuf",
	"lmserver",
	"lmwksta",
	"processenv",
	"winbase",
	"wincon",
]
