[package]
name = "clearscreen"
version = "4.0.2"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0 OR MIT"
description = "Cross-platform terminal screen clearing"
keywords = ["clear", "cls", "cli", "terminal"]

documentation = "https://github.com/watchexec/clearscreen"
homepage = "https://github.com/watchexec/clearscreen"
repository = "https://github.com/watchexec/clearscreen"
readme = "README.md"

edition = "2021"
exclude = ["/bin", "/.github"]
rust-version = "1.79.0"

[features]
windows-console = []

[dependencies]
terminfo = "0.9.0"
thiserror = "2.0.11"
which = "8.0.0"

[target.'cfg(unix)'.dependencies.nix]
version = "0.29.0"
default-features = false
features = ["fs", "term"]

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59.0"
default-features = false
features = [
	"Win32_Foundation",
	"Win32_System_Console",
	"Win32_System_SystemInformation",
	"Win32_System_SystemServices",
	"Win32_NetworkManagement_NetManagement",
]
